chore(lists): fixes tables and registers titles
remove tables column which would be used to show the
foreign key that links the tables

change register titles which was not specifying the
registration screens

feat(foreign-key): add selects for the foreign key

add selects to registration, edit and preview screens to
link the tables with foreign keys

--- a/Project/css/listsEditStyles/peopleListEdit.css
+++ b/Project/css/listsEditStyles/peopleListEdit.css
@@ -94,11 +94,11 @@ section {
     color: var(--teal);
 }
 
-.fullname, .birth, .cpf, .address, .phoneNumber, .email {
+.accountsNumber, .fullname, .birth, .cpf, .address, .phoneNumber, .email {
     margin-right: 20px;
 }
 
-.wrapper form input {
+.wrapper form input, .accountsNumber select {
     padding: 7px;
     margin-bottom: 10px;
     outline: none;
@@ -112,9 +112,10 @@ section {
 
 .birth input[type="date"] {
     width: 200px;
+    color: var(--tan);
 }
 
-.cpf input, .phoneNumber input {
+.accountsNumber select, .cpf input, .phoneNumber input {
     width: 300px;
 }
 
