--- a/Project/css/previewsStyles/peoplePreview.css
+++ b/Project/css/previewsStyles/peoplePreview.css
@@ -94,16 +94,20 @@ section {
     color: var(--teal);
 }
 
-.fullname, .birth, .cpf, .address, .phoneNumber, .email {
+.accountsNumber, .fullname, .birth, .cpf, .address, .phoneNumber, .email {
     margin-right: 20px;
 }
 
-.wrapper form input {
+.wrapper form input, .accountsNumber select {
     padding: 7px;
     margin-bottom: 10px;
     outline: none;
     border: 1px solid rgba(119, 104, 71, 0.459);
     background-color: var(--peach);
+}
+
+.accountsNumber select {
+    color: var(--tan);
 }
 
 .fullname input, .email input {
@@ -112,9 +116,10 @@ section {
 
 .birth input[type="date"] {
     width: 200px;
+    color: var(--tan);
 }
 
-.cpf input, .phoneNumber input {
+.accountsNumber select, .cpf input, .phoneNumber input {
     width: 300px;
 }
 
