--- a/Project/screens/views/accountList.html
+++ b/Project/screens/views/accountList.html
@@ -169,8 +169,8 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>Agency_ID</th>
                                 <th>Account Type</th>
+                                <th>Account Number</th>
                                 <th>Opening Balance</th>
                                 <th>Account Holder</th>
                                 <th>Opening Date</th>
@@ -179,8 +179,8 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>#</td>
                                 <td>Checking Account</td>
+                                <td>#</td>
                                 <td>BRL</td>
                                 <td>Gabriela Oliveira</td>
                                 <td>mm/dd/yyyy</td>
@@ -192,8 +192,8 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Salary Account</td>
+                                <td>#</td>
                                 <td>BRL</td>
                                 <td>Leonardo Pereira</td>
                                 <td>mm/dd/yyyy</td>
@@ -205,8 +205,8 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Joint Account</td>
+                                <td>#</td>
                                 <td>BRL</td>
                                 <td>Isabela Mendes</td>
                                 <td>mm/dd/yyyy</td>
@@ -218,8 +218,8 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Payment Account</td>
+                                <td>#</td>
                                 <td>BRL</td>
                                 <td>Camila Costa</td>
                                 <td>mm/dd/yyyy</td>
@@ -231,8 +231,8 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Financial Investments</td>
+                                <td>#</td>
                                 <td>BRL</td>
                                 <td>Ricardo Santos</td>
                                 <td>mm/dd/yyyy</td>
