--- a/Project/screens/views/agencyList.html
+++ b/Project/screens/views/agencyList.html
@@ -159,7 +159,7 @@
                         <a href="../registrations/agencyRegister.html">
                             <button>
                                 <i class="fa-solid fa-plus"></i>
-                                <span>Add Bank</span>
+                                <span>Add Agency</span>
                             </button>
                         </a>
                     </div>
@@ -169,17 +169,15 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>Bank_ID</th>
                                 <th>Agency Name</th>
                                 <th>Agency Number</th>
                                 <th>Address</th>
-                                <th>Code</th>
+                                <th>ID</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>#</td>
                                 <td>Central FinanCity</td>
                                 <td>#</td>
                                 <td>Rio de Janeiro, Copacabana...</td>
@@ -191,7 +189,7 @@
                                 </td>
                             </tr>
 
-                            <td>#</td>
+                            <tr>
                                 <td>First Capital</td>
                                 <td>#</td>
                                 <td>Rio Grande do Sul, Gramado...</td>
@@ -203,7 +201,7 @@
                                 </td>
                             </tr>
 
-                            <td>#</td>
+                            <tr>
                                 <td>Financial Hub</td>
                                 <td>#</td>
                                 <td>Alagoas, Maceió...</td>
@@ -215,7 +213,7 @@
                                 </td>
                             </tr>
 
-                            <td>#</td>
+                            <tr>
                                 <td>Unity Plaza</td>
                                 <td>#</td>
                                 <td>São Paulo, Guarulhos...</td>
@@ -227,7 +225,7 @@
                                 </td>
                             </tr>
 
-                            <td>#</td>
+                            <tr>
                                 <td>Digital Nexus</td>
                                 <td>#</td>
                                 <td>Paraná, Curitiba...</td>
