--- a/Project/screens/views/peopleList.html
+++ b/Project/screens/views/peopleList.html
@@ -159,7 +159,7 @@
                         <a href="../registrations/peopleRegister.html">
                             <button>
                                 <i class="fa-solid fa-plus"></i>
-                                <span>Add Account</span>
+                                <span>Add Person</span>
                             </button>
                         </a>
                     </div>
@@ -169,7 +169,6 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>Account_ID</th>
                                 <th>Fullname</th>
                                 <th>Date of Birth</th>
                                 <th>CPF</th>
@@ -180,7 +179,6 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>#</td>
                                 <td>Gabriela Oliveira</td>
                                 <td>mm/dd/yyyy</td>
                                 <td>000.000.000-00</td>
@@ -194,7 +192,6 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Leonardo Pereira</td>
                                 <td>mm/dd/yyyy</td>
                                 <td>000.000.000-00</td>
@@ -208,7 +205,6 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Isabela Mendes</td>
                                 <td>mm/dd/yyyy</td>
                                 <td>000.000.000-00</td>
@@ -222,7 +218,6 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Camila Costa</td>
                                 <td>mm/dd/yyyy</td>
                                 <td>000.000.000-00</td>
@@ -236,7 +231,6 @@
                             </tr>
 
                             <tr>
-                                <td>#</td>
                                 <td>Ricardo Santos</td>
                                 <td>mm/dd/yyyy</td>
                                 <td>000.000.000-00</td>
