--- a/Project/css/listsEditStyles/accountListEdit.css
+++ b/Project/css/listsEditStyles/accountListEdit.css
@@ -107,7 +107,7 @@ input::placeholder {
     font-style: italic;
 }
 
-.accountType, .accountNumber, .openingBalance, .accountHolder, .openingDate {
+.agencies, .accountType, .accountNumber, .openingBalance, .accountHolder, .openingDate {
     margin-right: 20px;
 }
 
@@ -116,14 +116,14 @@ input::placeholder {
 }
 
 .accountNumber input {
-    width: 300px;
+    width: 350px;
 }
 
 .accountHolder input {
-    width: 400px;
+    width: 450px;
 }
 
-.accountType select {
+.agencies select, .accountType select {
     width: 200px;
     padding: 7px;
     border: 1px solid rgba(119, 104, 71, 0.459);
@@ -148,7 +148,7 @@ select .dropdownHolder {
 .confirm-cancel-buttons {
     margin-top: 100px;
     position: relative;
-    left: 5%;
+    left: 80%;
 }
 
 .confirm-cancel-buttons button {
