--- a/Project/css/previewsStyles/bankPreview.css
+++ b/Project/css/previewsStyles/bankPreview.css
@@ -88,17 +88,17 @@ section {
     flex-wrap: wrap;
 }
 
-.bankName label, .bankId label {
+.bankName label, .bankCode label {
     display: flex;
     flex-direction: column;
     color: var(--teal);
 }
 
-.bankName, .bankId {
+.bankName, .bankCode {
     margin-right: 20px;
 }
 
-.bankName input, .bankId input {
+.bankName input, .bankCode input {
     width: 500px;
     padding: 7px;
     margin-bottom: 10px;
@@ -118,7 +118,7 @@ section {
         padding: 60px 90px;
     }
 
-    .bankName input, .bankId input {
+    .bankName input, .bankCode input {
         width: 600px;
     }
 }
@@ -128,7 +128,7 @@ section {
         padding: 30px;
     }
 
-    .bankName input, .bankId input {
+    .bankName input, .bankCode input {
         width: 320px;
     }
 }
