--- a/Project/css/registrationsStyles/agencyRegister.css
+++ b/Project/css/registrationsStyles/agencyRegister.css
@@ -94,7 +94,7 @@ section {
     color: var(--teal);
 }
 
-.name, .number, .address, .code {
+.banks, .name, .number, .address, .code {
     margin-right: 20px;
 }
 
@@ -107,7 +107,7 @@ section {
     background-color: var(--peach);
 }
 
-.number input {
+.banks select, .number input {
     width: 200px;
     padding: 7px;
     margin-bottom: 10px;
@@ -174,10 +174,6 @@ section {
 }
 
 @media screen and (max-width: 580px){
-    body {
-        overflow: hidden;
-    }
-
     section {
         padding: 30px;
     }
