--- a/Project/css/registrationsStyles/bankRegister.css
+++ b/Project/css/registrationsStyles/bankRegister.css
@@ -90,17 +90,17 @@ section {
     flex-wrap: wrap;
 }
 
-.bankName label, .bankId label {
+.bankName label, .bankCode label {
     display: flex;
     flex-direction: column;
     color: var(--teal);
 }
 
-.bankName, .bankId {
+.bankName, .bankCode {
     margin-right: 20px;
 }
 
-.bankName input, .bankId input {
+.bankName input, .bankCode input {
     width: 500px;
     padding: 7px;
     margin-bottom: 10px;
@@ -158,7 +158,7 @@ section {
         padding: 60px 90px;
     }
 
-    .bankName input, .bankId input {
+    .bankName input, .bankCode input {
         width: 600px;
     }
 
@@ -172,7 +172,7 @@ section {
         padding: 30px;
     }
 
-    .bankName input, .bankId input {
+    .bankName input, .bankCode input {
         width: 320px;
     }
 
