--- a/Project/screens/views/bankList.html
+++ b/Project/screens/views/bankList.html
@@ -170,7 +170,7 @@
                         <thead>
                             <tr>
                                 <th>Bank Name</th>
-                                <th>Bank ID Number</th>
+                                <th>Bank Code</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
