--- a/Project/css/registrationsStyles/agencyRegister.css
+++ b/Project/css/registrationsStyles/agencyRegister.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;0,900&display=swap');
 
 :root {
     --teal: #113946;
@@ -105,6 +105,10 @@ section {
     outline: none;
     border: 1px solid rgba(119, 104, 71, 0.459);
     background-color: var(--peach);
+}
+
+.banks select {
+    color: var(--brown);
 }
 
 .banks select, .number input {
