--- a/Project/css/registrationsStyles/peopleRegister.css
+++ b/Project/css/registrationsStyles/peopleRegister.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;0,900&display=swap');
 
 :root {
     --teal: #113946;
@@ -103,8 +103,11 @@ section {
     margin-bottom: 10px;
     outline: none;
     border: 1px solid rgba(119, 104, 71, 0.459);
-    color: var(--tan);
     background-color: var(--peach);
+}
+
+.accountsNumber select {
+    color: var(--brown);
 }
 
 .fullname input, .email input {
@@ -113,6 +116,7 @@ section {
 
 .birth input[type="date"] {
     width: 200px;
+    color: var(--tan);
 }
 
 .accountsNumber select, .cpf input, .phoneNumber input {
