--- a/Project/css/userStyles/profileSettings.css
+++ b/Project/css/userStyles/profileSettings.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400&display=swap');
 
 :root {
     --teal: #113946;
@@ -79,13 +79,12 @@ body {
     padding: 12px;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 160px;
+    margin-left: 160px;   
 }
 
 .container input[type="file"] {
     display: none;
 }
-
 
 .confirmUpdate {
     margin-top: 20px;
